crates/harness-monitor/src/snapshots/harness_monitor__tui__tests__routa_watch_tui_compact.snap
---
source: crates/harness-monitor/src/tui_tests.rs
assertion_line: 667
expression: "render_snapshot(&state, &mut cache, 96, 24)"
---
 Harness Monitor   repo:routa-js  branch:main  agents:2 active:1  dirty:2  unknown:1  synced 2m
┌Git Status────────────────────────────────────────────────────────────────────────────────────┐
│ 2 files, 5 commits, workspace: project, 1 agent, branch: main, 2 worktrees                   │
│──────────────────────────────────────────────────────────────────────────────────────────────│
│> tui.rs                                                                                      │
│  ...s-monitor/src  M  +38 -5     4m                                                          │
│  route.ts                                                                                    │
│  .../api/a2a/card  D  -12        5m                                                          │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌Fitness (Entrix Fast)─────────────────────────────────────────────────────────────────────────┐
│Score: PASS 91.0% (0/12) 4200ms                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌Diff Preview──────────────────────────────────────────────────────────────────────────────────┐
│@@ -1,2 +1,3 @@                                                                               │
│-use old                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌Details───────────────────────────────────────────────────────────────────────────────────────┐
│tui.rs                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
↑↓ select  S run sort  v run filter  u unknown  d preview  Pg scroll  g refresh fitness  m fast/
