crates/harness-monitor/src/snapshots/harness_monitor__tui__tests__routa_watch_tui_full_runs.snap
---
source: crates/harness-monitor/src/tui_tests.rs
assertion_line: 527
expression: "render_snapshot(&state, &mut cache, 180, 28)"
---
routa.js  2 dirty  1 unattributed  loc: --  fitness: fast  transport: socket
┌Runs [Tab]─────────────────────────────────┐┌Git Status────────────────────────────────────────────────────────────────┐┌Diff Preview─────────────────────────────────────────────┐
│ 2 active  4 total  2 worktree(s)  mode:unm││ 2 files, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktrees      ││@@ -1,2 +1,3 @@                                          │
│ filter:all  sort:recent  view:1-4/4       ││──────────────────────────────────────────────────────────────────────────││-use old                                                 │
│▶ ◈ impl-buddy                executing    ││> tui.rs                                                                  ││+use new                                                 │
│  builder  hook-backed  codex  files:1  e/i││  ...s-monitor/src  M  +38 -5     4m                                      ││+use cache                                               │
│  ◈ test-master               evaluating   ││  route.ts                                                                ││                                                         │
│  reviewer  hook-backed  codex  files:1  e/││  .../api/a2a/card  D  -12        5m                                      ││                                                         │
│  ◈ Codex#4211                executing   <││                                                                          ││                                                         │
│  builder  process-scan  codex  files:0  e/││                                                                          ││                                                         │
│  ? unattributed              attention    ││                                                                          ││                                                         │
│  reviewer  attribution-review  unknown  fi││                                                                          ││                                                         │
│                                           ││                                                                          ││                                                         │
└───────────────────────────────────────────┘│                                                                          │└─────────────────────────────────────────────────────────┘
┌Agents─────────────────────────────────────┐│                                                                          │┌Fitness (Entrix Fast)────────────────────────────────────┐
│4211 ◈ Codex  ACTIVE                       │└──────────────────────────────────────────────────────────────────────────┘│Score: PASS 91.0% (0/12) 4200ms                          │
│cpu  2.5%  mem 128MB  up 01:35             │┌Run Details───────────────────────────────────────────────────────────────┐│[ 91.0%] ███████████████████░░                           │
│proj project  conf 80%                     ││impl-buddy                                                                ││mode: Entrix Fast  press m to switch                     │
│                                           ││live-hook-check  builder  hook-backed                                     ││Dimension scores:                                        │
│9001 ◆ Claude  IDLE                        ││State: executing  Block: missing coverage_report  Mode: unmanaged         ││92% code_quality          w18  4/4  ██████████████████░░ │
│cpu  0.1%  mem 96MB  up <ts>           ││Workspace: dirty  Path: <repo>                                      ││95% api_contract          w10  2/2  ███████████████████░ │
└───────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────┘
┌Event Stream (all)────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│<ts>  WATCH  modify   crates/harness-monitor/src/tui.rs                                                                                                                       │
│<ts>  HOOK   live-hook-check Edit Write                                                                                                                                       │
│<ts>  GIT    post-commit main                                                                                                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Tab Runs/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unknown  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  g refresh fitness  m fast/full  q quit
