crates/harness-monitor/src/snapshots/harness_monitor__tui__tests__routa_watch_tui_search.snap
---
source: crates/harness-monitor/src/tui_tests.rs
assertion_line: 645
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
 Harness Monitor   repo:routa-js  branch:main  agents:2 active:1  dirty:1  unknown:1  synced 2m ago
┌Git Status──────────────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────┐
│ 1 file, 5 commits, workspace: project, 1 agent, branch: main, 2 worktrees          ││@@ -1,2 +1,3 @@                 │
│────────────────────────────────────────────────────────────────────────────────────││-use old                        │
│> route.ts                                      card/            D  -12        5m   ││+use new                        │
│                                                                                    ││+use cache                      │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    │└────────────────────────────────┘
│                                                                                    │┌Details─────────────────────────┐
│                                                                                    ││route.ts                        │
│                                                                                    ││src/app/api/a2a/card            │
└────────────────────────────────────────────────────────────────────────────────────┘│Lines: ...  Size: ...  Git      │
┌Fitness (Entrix Fast)───────────────────────────────────────────────────────────────┐│changes: ...                    │
│Score: PASS 91.0% (0/12) 4200ms                                                     ││                                │
│[ 91.0%] █████████████████████████░░░                                               ││                                │
│mode: Entrix Fast  press m to switch                                                ││                                │
│Dimension scores:                                                                   ││                                │
│92% code_quality           w18  4/4  ██████████████████████████░░                   ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab Runs/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unknown  d preview/diff  Pg scroll  f follow:on  T
