crates/harness-monitor/src/snapshots/harness_monitor__tui__tests__routa_watch_tui_summary.snap
---
source: crates/harness-monitor/src/tui_tests.rs
assertion_line: 516
expression: "render_snapshot(&state, &mut cache, 120, 28)"
---
routa.js  2 dirty  1 unattributed  loc: --  fitness: fast  transport: socket
┌Git Status──────────────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────┐
│ 2 files, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktrees                ││@@ -1,2 +1,3 @@                 │
│────────────────────────────────────────────────────────────────────────────────────││-use old                        │
│> tui.rs                                        src/             M  +38 -5     4m   ││+use new                        │
│  route.ts                                      card/            D  -12        5m   ││+use cache                      │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    │└────────────────────────────────┘
│                                                                                    │┌File Detail─────────────────────┐
│                                                                                    ││tui.rs                          │
│                                                                                    ││crates/harness-monitor/src      │
│                                                                                    ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab Runs/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unknown  d preview/diff  Pg scroll  f follow:on  T
